# swordxx

./: .cvsignore  .gitignore  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  CODINGSTYLE  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.cfg  Makefile.cvs  Makefile.in  Makefile.post  README  README.svn  aclocal.m4  arminst.sh  autogen.sh  buildtest.cpp  config.h.in  configure  configure.ac  debug.sh  distignore  mkinstalldirs  modlist  mods.conf  options.conf  sword.kdevprj  sword.pc.in  sword.spec  swordxx.pc.in  testlib.cpp  travis.sh  usrinst.sh
bindings/: CMakeLists.txt  Makefile  Makefile.am  README  autogen.sh  configure.ac  flatapi.cpp  usrinst.sh
bindings/Android/: Makefile
bindings/bcppmake/: MainCLXTest.cpp  MainCLXTest.h  MainTest.cpp  MainTest.h  clxtest.cpp  sword.bpf  sword.c  test.cpp
bindings/clx/: Sword.pas
bindings/corba/: Makefile.am  sword.idl  swordorb.idl
bindings/cordova/: Makefile  README
bindings/csharp/: AssemblyInfo.cs  FlatApiLookup.cs  Makefile  Module.cs  NativeMethods.cs  Sword.Tests.csproj  Sword.csproj  Sword.sln
bindings/gsoap/: Makefile  Makefile.am  gsoapsword.cpp  gsoapsword.h  soapcpp  testclient.cpp
bindings/java-jni/: Makefile  README
bindings/objc/: Makefile  ObjCSword-iOS_Prefix.pch  ObjCSword.h  ObjCSword_Prefix.pch  README
bindings/perl/: Changes  Makefile.PL  README  Sword.pm  Sword.xs  test.pl  typemap
bindings/swig/: .deprecations.i.swp  .listkey.i.swp  .swbuf.i.swp  .sword.i.swp  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile.swig  README  aclocal.m4  configure  configure.ac  deprecations.i  directors.i  encfiltmgr.i  ftptrans.i  installmgr.i  listkey.i  localemgr.i  lzsscompress.i  markupcallback.h  markupfiltmgr.i  osishtmlhref.i  perl.m4  php4.m4  python.m4  rawcom.i  rawgenbook.i  rawld.i  rawld4.i  rawtext.i  rendercallback.h  searcher.h  swbuf.i  swcom.i  swcompress.i  swconfig.i  swfiltermgr.i  swgenbook.i  (+21 more)
examples/cmdline/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  listoptions.cpp  lookup.cpp  outplain.cpp  outrender.cpp  outvplskeleton.cpp  search.cpp  simple.cpp  stripaccents.cpp  threaded_search.cpp  verserangeparse.cpp
examples/tasks/: CMakeLists.txt  Makefile.am  listbiblebooknames.cpp  parallelbibles.cpp  simpleverselookup.cpp
icu/: .cvsignore  Makefile.am  Makefile.in  translit_Any_Latex.txt  translit_Any_Latin1.txt  translit_BETA_Greek.txt  translit_BGreek_Greek.txt  translit_CCAT_Hebrew.txt  translit_CCAT_Syriac.txt  translit_Latin_Arabic.txt  translit_Latin_Armenian.txt  translit_Latin_Coptic.txt  translit_Latin_Ethiopic.txt  translit_Latin_Georgian.txt  translit_Latin_Gothic.txt  translit_Latin_Hebrew.txt  translit_Latin_Syriac.txt  translit_Latin_Thai.txt  translit_Latin_Ugaritic.txt  translit_swordindex.txt
lib/: .cvsignore  Makefile  Makefile.am  Makefile.in
lib/bcppmake/: libsword.bdsproj  libsword.bpf  libsword.bpr  libsword6icu.bpf  libsword6icu.bpr
lib/vcppmake/: libsword.sln  libsword.vcxproj
locales.d/: Makefile.am  abbr.conf  af-utf8.conf  af.conf  ar-utf8.conf  ar_EG-cp1256.conf  ar_EG-utf8.conf  az-utf8.conf  be-utf8.conf  bg-utf8.conf  bg_BG-cp1251.conf  bg_BG-utf8.conf  cs-utf8.conf  cs.conf  cy-utf8.conf  cy.conf  da-utf8.conf  da.conf  de-utf8.conf  de.conf  de_abbrev-utf8.conf  de_abbrev.conf  en_GB.conf  es-utf8.conf  es.conf  et-utf8.conf  et.conf  et_abbr-utf8.conf  et_abbr.conf  fa-utf8.conf  fi-utf8.conf  fi.conf  fo-utf8.conf  fr-utf8.conf  fr.conf  fr_FR.ISO-8859-1.conf  fr_abbrev-utf8.conf  fr_abbrev.conf  ga-utf8.conf  he-utf8.conf  (+61 more)
samples/: Makefile.am  mods.conf.large  mods.conf.small
samples/mods.d/: rwp.conf  strongsnt.conf  strongsot.conf  vines.conf  web.conf  websters.conf
samples/recommended/: README
src/keys/: Makefile  Makefile.am  genarray.c  listkey.cpp  nt.bks  nt.cps  ot.bks  ot.cps  refsys.cpp  strkey.cpp  swkey.cpp  swkey.h  treekey.cpp  treekeyidx.cpp  versekey.cpp  versekey2.cpp  versetreekey.cpp  versetreekey.h
src/mgr/: Makefile  Makefile.am  curlftpt.cpp  curlftpt.h  curlhttpt.cpp  encfiltmgr.cpp  encfiltmgr.h  filemgr.cpp  filemgr.h  ftplibftpt.cpp  ftptrans.cpp  installmgr.cpp  localemgr.cpp  markupfiltmgr.cpp  markupfiltmgr.h  refsysmgr.cpp  remotetrans.cpp  rtranspgdrive.cpp  stringmgr.cpp  swcacher.cpp  swconfig.cpp  swencodingmgr.cpp  swfiltermgr.cpp  swfiltermgr.h  swlocale.cpp  swmarkupmgr.cpp  swmgr.cpp  swmgr.h  swsearchable.cpp  swsourcemgr.cpp  versemgr.cpp  versificationmgr.cpp
src/swordxx/: CMakeLists.txt  DebugOnly.h  DirectoryEnumerator.cpp  DirectoryEnumerator.h  Flags.h  ShareRef.h  SignConversion.h  SimpleTokenizer.h  SwordxxConfig.cmake.in  SwordxxConfigVersion.cmake.in  UnicodeConversionFilter.cpp  UnicodeConversionFilter.h  UnicodeConverter.cpp  UnicodeConverter.h  XmlBuilder.cpp  XmlBuilder.h  canon.h  canon_abbrevs.h  canon_calvin.h  canon_catholic.h  canon_catholic2.h  canon_darbyfr.h  canon_german.h  canon_kjva.h  canon_luther.h  (+97 more)
tests/: .cvsignore  AllAsciiChars.h  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  TestAssert.h  bibliotest.cpp  casttest.cpp  ciphertest.cpp  complzss.cpp  compnone.cpp  compzip.cpp  configtest.cpp  filtertest.cpp  genbooktest.cpp  httptest.cpp  icutest.cpp  indextest.cpp  installgrtest.cpp  installmgrtest.cpp  introtest.cpp  keycast.cpp  keytest.cpp  keytest2.cpp  ldtest.cpp  lextest.cpp  listtest.cpp  localetest.cpp  mgrtest.cpp  modtest.cpp  osistest.cpp  outputcps.cpp  parsekey.cpp  rawldidxtest.cpp  refsystest.cpp  romantest.cpp  striptest.cpp  swaptest.cpp  swbuftest.cpp  (+27 more)
utilities/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  addcomment.cpp  addgb.cpp  addld.cpp  addvs.cpp  cipherraw.cpp  ciphertest.cpp  ciphertest2.cpp  cryptraw.cpp  crypttest.cpp  crypttest2.cpp  emptyvss.cpp  gbfidx.cpp  genarray.c  genbookutil.cpp  imp2gbs.cpp  imp2ld.cpp  imp2vs.cpp  installmgr.cpp  lexdump.c  lexdump.cpp  mkfastmod.cpp  mod2imp.cpp  mod2osis.cpp  mod2vpl.cpp  mod2zmod.cpp  mod2zmod2.cpp  modwrite.cpp  no13.c  normcode.cpp  osis2mod.cpp  step2vpl.cpp  stepdump.cpp  stripaccents.cpp  sub.c  tei2mod.cpp  (+8 more)
(+1538 files in other folders)
